delete redundant files done: take a screenshot and show it on GridView with other necessary info

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file alias="main.qml">qml/main.qml</file>
         <file alias="StartScreen.qml">qml/screens/StartScreen.qml</file>
+        <file alias="RecordDelegate.qml">qml/delegates/RecordDelegate.qml</file>
+        <file alias="Constants.qml">qml/Constants.qml</file>
     </qresource>
 </RCC>
