added a ScreenSaver control buttons

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -3,6 +3,8 @@
         <file alias="main.qml">qml/main.qml</file>
         <file alias="StartScreen.qml">qml/screens/StartScreen.qml</file>
         <file alias="RecordDelegate.qml">qml/delegates/RecordDelegate.qml</file>
+        <file alias="SaverControlPanel.qml">qml/components/SaverControlPanel.qml</file>
+        <file alias="RecordView.qml">qml/components/RecordView.qml</file>
         <file alias="Constants.qml">qml/Constants.qml</file>
     </qresource>
 </RCC>
